@@ -13,6 +13,7 @@ Changes in version 0.0.3 - UNRELEASED:
    on certain pages.
  * Bug 20973: Silence Gdk warnings on systems with integrated png loader.
  * Bug 20806: Try even harder to exclude gstreamer.
+ * Enforce the patch size against that listed in the update XML metadata.
  * Minor tweaks to the "something in progress" dialog box.
  * Disable the firefox safe mode prompt, because it is nonsensical when
    applied to Tor Browser.
